--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,12 +62,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Schyler
+      fonts:
+        - asset: asset/fonts/Tangerine/Tangerine-Bold.ttf
+        - asset: asset/fonts/Tangerine/Tangerine-Regular.ttf
+          style: italic
+    - family: San
+      fonts:
+        - asset: asset/fonts/Open_Sans_Condensed/OpenSansCondensed-Bold.ttf
+        - asset: asset/fonts/Open_Sans_Condensed/OpenSansCondensed-Light.ttf
+        - asset: asset/fonts/Open_Sans_Condensed/OpenSansCondensed-LightItalic.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
