--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   liquid_progress_indicator: any
   fluttertoast: any
   shared_preferences: any
+  flutter_datetime_picker: any
 
 dev_dependencies:
   flutter_test:
