--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_messaging: ^6.0.16
   firebase_core: ^0.7.0
   pull_to_refresh: any
+  flutter_local_notifications: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
